--- a/.github/workflows/push-cf.yml
+++ b/.github/workflows/push-cf.yml
@@ -6,7 +6,7 @@ on: workflow_dispatch
 env:
   IBM_CLOUD_REGION: us-east
   IBM_CLOUD_GROUP: Default
-  IBM_CLOUD_SPACE: farr0233@algonquinlive.com
+  IBM_CLOUD_SPACE: djangoserver-space
   IBM_CLOUD_ORG: Saif-Org
   MANIFEST_NAME: manifest.yml
   IBM_CLOUD_API: ${{secrets.IBM_CLOUD_API_KEY}}
